# naviera

./: .gitignore  LICENSE  README.md
.devcontainer/: devcontainer.json  post-create.sh
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2dc7f2258368_create_initial_tenant_and_user_tables.py  3ab6985b27c8_create_tenant_and_user_tables.py  b1bd54077869_add_pickup_tables.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: tenants.py  users.py
backend/app/core/: config.py  db.py  dependencies.py  logging.py  security.py
backend/app/exceptions/: definitions.py  handlers.py
backend/app/middleware/: __init__.py  logging.py
backend/app/models/: __init__.py  pickups.py  tenant_models.py  tenants.py
backend/app/repositories/: tenants.py
backend/app/schemas/v1/: tenants.py
backend/app/services/: tenants.py
backend/scripts/: seed.py  test_auth_flow.py
scripts/: init_backend_dependencies.sh  init_naviera_monorepo.sh
